# shape_detection

./: CMakeLists.txt  main.cpp
